--- a/stackhost.yaml
+++ b/stackhost.yaml
@@ -9,7 +9,7 @@ commands:
   build:
     - pip install -r requirements.txt
   start:
-    - python3 bot.py
+    - python3 ai.py
 
 env:
   - TELEGRAM_TOKEN=7567951774:AAEeyDqHnaC7uuPUvw_wAoW6WF9iZ0pO_NE
