--- a/stackhost.yaml
+++ b/stackhost.yaml
@@ -7,6 +7,7 @@ python_version: "3.11"
 
 commands:
   build:
+    - apt update && apt install -y ffmpeg
     - pip install -r requirements.txt
   start:
     - python3 ai.py
